[tool.poetry]
name = "aitools-agent-zero"
version = "0.1.7"
description = ""
authors = ["iosub <1330995+iosub@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ansio = "0.0.1"
python-dotenv = "1.0.1"
langchain-groq = "0.1.6"
langchain-huggingface = "0.0.3"
langchain-ollama = "0.1.3"
langchain-openai = "0.1.15"
langchain-community = "0.2.7"
langchain-anthropic = "0.1.19"
langchain-google-genai = "1.0.7"
webcolors = "24.6.0"
sentence-transformers = "3.0.1"
docker = "7.1.0"
paramiko = "^3.4.0"
duckduckgo-search = "6.1.12"
inputimeout = "1.0.4"
newspaper3k = "0.2.8"
beautifulsoup4 = "4.12.3"
lxml-html-clean = "0.2.0"
pynput = "1.7.7"
pypdf = "4.3.1"
flask = {version = "3.0.3", extras = ["async"]}
flask-basicauth = "0.2.0"
faiss-cpu = "1.8.0.post1"
langchain-mistralai = "0.1.8"
markdown = "3.7"
unstructured = "0.15.13"
unstructured-client = "0.25.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
